# DLMatFramework

./: .gitignore  LICENSE  README.md  dataset.h5  for_leo.h5  startup.m
utils/optimization_functions/cppPrj/: CMakeLists.txt  adam.h  baselayer.cpp  baselayer.h  baseloss.h  baseoptimizer.cpp  cppPrj.pro  crossentropy.h  layercontainer.h  main.cpp  meansquarederror.h  multiclasscrossentropy.cpp  multiclasscrossentropy.h  relu.cpp  relu.h  sgdmomentum.cpp  tensor.cpp  tensor.h  tests.cpp
utils/optimization_functions/cppPrj/classifier/: deeplearningmodel.cpp  deeplearningmodel.h
utils/optimization_functions/cppPrj/datasets/: conv_cs231n.h5  conv_cs231n1.h5  conv_cs231n_original.h5
utils/optimization_functions/cppPrj/layers/: avgpooling.cpp  avgpooling.h  baselayer.h  batchnorm.cpp  batchnorm.h  convolution.cpp  convolution.h  dropout.cpp  dropout.h  fullyconnected.cpp  fullyconnected.h  inputlayer.cpp  inputlayer.h  layercontainer.cpp  layercontainer.h  layermetadata.h  maxpooling.cpp  maxpooling.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
utils/optimization_functions/cppPrj/loss/: baseloss.cpp  baseloss.h  crossentropy.cpp  crossentropy.h  lossfactory.cpp  lossfactory.h  meansquarederror.cpp  meansquarederror.h  multiclasscrossentropy.cpp  multiclasscrossentropy.h
utils/optimization_functions/cppPrj/solver/: adam.cpp  adam.h  baseoptimizer.h  sgd.cpp  sgd.h  sgdmomentum.cpp  sgdmomentum.h  solver.cpp  solver.h
utils/optimization_functions/cppPrj/test/: test_hdf5helper.cpp  test_layers.cpp  test_loss.cpp  test_optimizers.cpp  test_tensors.cpp  test_toy_example.cpp  test_toy_example_batchnorm.cpp  test_toy_example_dropout.cpp  (+1 more)
(+275 files in other folders)
